fix: server-side config screen rewrite
- Configuration screen now fully works on dedicated servers
- Screen closes on save, reopens after server confirms changes via SyncPayload
- Added tick-based reopen delay to prevent close/reopen race
- All options (backfire, roleDividend, map variables, RTP, roles, modifiers, etc.) now go through a flush/sync cycle when applying changes