@@ -1,18 +1,18 @@
 package cat.rezelyn.watheextended.api.hml;
 
-import blue.endless.jankson.*;
+import cat.rezelyn.watheextended.api.config.ServerConfig;
+import cat.rezelyn.watheextended.api.config.ServerConfig.Entry;
+import cat.rezelyn.watheextended.api.config.ClientConfig;
+import net.fabricmc.api.EnvType;
 import net.fabricmc.loader.api.FabricLoader;
 import org.agmas.harpymodloader.config.HarpyModLoaderConfig;
 
-import java.io.File;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.function.Function;
 
 public final class ConfigHelper {
-
-    private static final File CONFIG_FILE = FabricLoader.getInstance()
-            .getConfigDir().resolve("harpymodloader.json5").toFile();
 
     private ConfigHelper() {
     }
@@ -25,56 +25,111 @@ public final class ConfigHelper {
         HarpyModLoaderConfig.HANDLER.save();
     }
 
-    private static List<String> readStringList(String key) {
+    public static void registerEntries() {
+        Function<List<String>, String> listSer = list -> list == null || list.isEmpty() ? "" : String.join(",", list);
+        Function<String, List<String>> listDeser = s -> s == null || s.isEmpty() ? List.of() : Arrays.asList(s.split(",", -1));
+
+        ServerConfig.register(Entry.global(
+                "hml.disabled", List.<String>of(),
+                () -> {
+                    try {
+                        List<String> v = getInstance().disabled;
+                        return v != null ? Collections.unmodifiableList(v) : List.of();
+                    } catch (Throwable t) {
+                        return List.of();
+                    }
+                },
+                v -> {
+                    try {
+                        getInstance().disabled = new java.util.ArrayList<>(v);
+                        save();
+                    } catch (Throwable ignored) {
+                    }
+                },
+                listSer, listDeser));
+
+        ServerConfig.register(Entry.global(
+                "hml.disabledModifiers", List.<String>of(),
+                () -> {
+                    try {
+                        List<String> v = getInstance().disabledModifiers;
+                        return v != null ? Collections.unmodifiableList(v) : List.of();
+                    } catch (Throwable t) {
+                        return List.of();
+                    }
+                },
+                v -> {
+                    try {
+                        getInstance().disabledModifiers = new java.util.ArrayList<>(v);
+                        save();
+                    } catch (Throwable ignored) {
+                    }
+                },
+                listSer, listDeser));
+
+        ServerConfig.register(Entry.globalInt("hml.modifierMaximum", 1,
+                () -> {
+                    try {
+                        return getInstance().modifierMaximum;
+                    } catch (Throwable t) {
+                        return 1;
+                    }
+                },
+                v -> {
+                    try {
+                        getInstance().modifierMaximum = v;
+                        save();
+                    } catch (Throwable ignored) {
+                    }
+                }));
+
+        ServerConfig.register(Entry.globalInt("hml.modifierMultiplier", 1,
+                () -> {
+                    try {
+                        return getInstance().modifierMultiplier;
+                    } catch (Throwable t) {
+                        return 1;
+                    }
+                },
+                v -> {
+                    try {
+                        getInstance().modifierMultiplier = v;
+                        save();
+                    } catch (Throwable ignored) {
+                    }
+                }));
+    }
+
+    public static List<String> getDisabledRoles() {
+        if (FabricLoader.getInstance().getEnvironmentType() == EnvType.CLIENT)
+            return ClientConfig.getStringList("hml.disabled");
         try {
-            if (!CONFIG_FILE.exists()) return List.of();
-            JsonObject obj = Jankson.builder().build().load(CONFIG_FILE);
-            JsonElement el = obj.get(key);
-            if (!(el instanceof JsonArray arr)) return List.of();
-            List<String> result = new ArrayList<>();
-            for (JsonElement item : arr)
-                if (item instanceof JsonPrimitive prim) result.add(prim.asString());
-            return Collections.unmodifiableList(result);
-        } catch (Throwable ignored) {
+            List<String> v = getInstance().disabled;
+            return v != null ? Collections.unmodifiableList(v) : List.of();
+        } catch (Throwable t) {
             return List.of();
         }
     }
 
-    private static int readInt(String key, int defaultValue) {
-        try {
-            if (!CONFIG_FILE.exists()) return defaultValue;
-            JsonObject obj = Jankson.builder().build().load(CONFIG_FILE);
-            JsonElement el = obj.get(key);
-            if (el instanceof JsonPrimitive prim) return Integer.parseInt(prim.asString());
-        } catch (Throwable ignored) {
-        }
-        return defaultValue;
-    }
-
-    public static List<String> getDisabledRoles() {
-        try {
-            List<String> live = getInstance().disabled;
-            if (live != null) return Collections.unmodifiableList(live);
-        } catch (Throwable ignored) {
-        }
-        return readStringList("disabled");
-    }
-
     public static List<String> getDisabledModifiers() {
+        if (FabricLoader.getInstance().getEnvironmentType() == EnvType.CLIENT)
+            return ClientConfig.getStringList("hml.disabledModifiers");
         try {
-            List<String> live = getInstance().disabledModifiers;
-            if (live != null) return Collections.unmodifiableList(live);
-        } catch (Throwable ignored) {
+            List<String> v = getInstance().disabledModifiers;
+            return v != null ? Collections.unmodifiableList(v) : List.of();
+        } catch (Throwable t) {
+            return List.of();
         }
-        return readStringList("disabledModifiers");
     }
 
     public static int getModifierMaximum() {
+        if (FabricLoader.getInstance().getEnvironmentType() == EnvType.CLIENT)
+            return ClientConfig.getInt("hml.modifierMaximum", 1);
         try {
             return getInstance().modifierMaximum;
-        } catch (Throwable ignored) {
+        } catch (Throwable t) {
+            return 1;
         }
-        return readInt("modifierMaximum", 1);
     }
 
     public static void setModifierMaximum(int value) {
@@ -86,11 +141,13 @@ public final class ConfigHelper {
     }
 
     public static int getModifierMultiplier() {
+        if (FabricLoader.getInstance().getEnvironmentType() == EnvType.CLIENT)
+            return ClientConfig.getInt("hml.modifierMultiplier", 1);
         try {
             return getInstance().modifierMultiplier;
-        } catch (Throwable ignored) {
+        } catch (Throwable t) {
+            return 1;
         }
-        return readInt("modifierMultiplier", 1);
     }
 
     public static void setModifierMultiplier(int value) {
